@@ -19,6 +19,7 @@ NEWS:
 NEW: [features/enhancments]
 +New Plugin Manager Dialog.
 +Improved configuration options for plugins.
++Incompatible plugins are now displayed in dialog with message explaining why.
 +Some basic autocompletion support for CSS.
 +Improved support for sessions. Multiple custom sessions can not be saved and
 reloaded (modified code from Erik Tollerud).
